--- a/SOFTWARE/PanelX/PanelX_MkI_code/.vscode/tasks.json
+++ b/SOFTWARE/PanelX/PanelX_MkI_code/.vscode/tasks.json
@@ -7,6 +7,11 @@
             "label": "build",
             "type": "shell",
             "command": "./src/build.py"
+        },
+        {
+            "label": "upload",
+            "type": "shell",
+            "command": "./src/upload.py"
         }
     ]
 }
